2002-07-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-file.c (gedit_file_open_uri_list): fix typo

2002-07-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.c (gedit_utils_convert_search_text): fixed to work
	with utf8 chars in the proper way (fixed bug #88660 and #88661)

2002-07-18  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-prefs-manager.c: use gnome-config instead of gconf to manage
	window size and state

2002-07-16  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-file.c (gedit_file_open_uri_list): if a file does not exists
	and create == TRUE, create it (fixed bug #77557)

	* gedit-utils.[ch] (gedit_utils_error_reporting_creating_file): new
	function

2002-07-16  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.[ch] (gedit_utils_create_empty_file): new function

	* gedit-file.c (gedit_file_open_uri_list): return FALSE if no file
	is loaded

	* gedit2.c (gedit_load_file_list): read stdin even if data == NULL
	(bug #88213 partially fixed)

	* gedit-document.c (gedit_document_load_from_stdin): convert input
	from locale encoding to utf8 if needed

	* gedit-commands.c (gedit_cmd_help_about): fix bug #88269

2002-07-15  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-utils.[ch] (gedit_utils_convert_search_text):  Converts
	things like "\n" into special characters.  Also, corrected
	g_uft8_caselessnmatch() to g_utf8_caselessnmatch() and fixed
	all references to the misspelled version.

	* gedit-document.[ch]:  search using the converted string

	* dialogs/gedit-dialog-replace.c
	(replace_dlg_replace_button_pressed):  Compare to the converted
	string to the selected text, instead of the user-specified string.

2002-07-15  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gedit-preferences-dialog.c: fixed bug #88019

	* dialogs/gedit-preferences.glade2: s/S_elected text color/
	Selecte_d text color (fixed bug #88018)

	*dialogs/plugin-manager.glade2: s/D_etails/De_tails (fixed bug #88018)

2002-07-10  Paolo Maggi  <maggi@athena.polito.it>
